# livraria

./: .gitignore  README.md  db.sqlite3  livraria_bkp.json  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_delete_categoria.py  0003_usuario.py  0004_categoria.py  0004_compra.py  0005_compra_data_itenscompra.py  0005_remove_categoria_nome.py  0006_autor_livro.py  0007_livro_autores.py
livraria/models/: __init__.py  compra.py  livro.py  usuario.py
livraria/serializers/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py  usuario.py
livraria/views/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py  usuario.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py
